--- a/style/cart.css
+++ b/style/cart.css
@@ -119,8 +119,7 @@ table th {
 
 table td {
     background-color: white;
-    background-color: rgba(13, 13, 13, 0.492);
-
+    background-color: rgb(241 192 229 / 49%);
     border-bottom: 2px solid;
     border: none;
 }
@@ -170,14 +169,14 @@ table td {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(232, 232, 232);
+    background-color: rgb(0 0 0);
     padding: 15px;
     border-radius: 50%;
-
 }
 
 .cartp table tr td .delbox i {
     font-size: 15px;
+    color: white;
 }
 
 .body .b_bill .z {}
@@ -245,6 +244,9 @@ table td {
 
 
 
+
+
+
 @media screen and (min-width:601px) and (max-width:770px) {
 
 
@@ -293,7 +295,7 @@ table td {
     .hs1,
     .hs2 {
         padding: 0 7px;
-        border-right: 1px solid;
+      
         font-size: 18px;
     }
 
@@ -344,9 +346,17 @@ table td {
 
 
 
-    .cartfooter {
-        margin-top: 100px;
-    }
+   
+
+    .cfoot {
+    position: absolute;
+    top: 24px;
+    width: 100%;
+    border-radius: 50px 50px 0px 0px;
+    background: url(../images/footer/f2.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;
+}
 
 
 
