--- a/style/about.css
+++ b/style/about.css
@@ -44,6 +44,45 @@
 
 
 
+/**/
+
+.aboutpage .heading{
+    padding: 50px 0;
+  
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.aboutpage .heading  h1{
+    font-size: 3rem;
+}
+
+.aboutpage .heading .two{
+    display: flex;
+}
+.aboutpage .heading .two .h1{
+    font-size: 1.3rem;
+   padding: 0 10px ;
+   border-right: 1px solid;
+}
+.aboutpage .heading .two .h2{
+   padding: 0 10px;
+    font-size: 1.3rem;
+}
+
+
+.aboutpage .video{
+    height: 70vh;
+}
+
+
+.aboutpage iframe{
+    width: 100%;
+    height: 100%;
+}
+
+
+
 @media screen and (max-width:600px) {
 
 
