--- a/style/contact.css
+++ b/style/contact.css
@@ -162,7 +162,7 @@ iframe {
 
 
 .address .container2 {
-    border-bottom: 1.5px black solid;
+    border-bottom: 1.5px rgb(0, 0, 0) solid;
     padding: 50px 0;
     display: flex;
 
@@ -180,7 +180,7 @@ iframe {
 }
 
 .container2 .box .san {
-    font-size: 1.6vw;
+    font-size: 1.4vw;
     font-weight: 600;
 }
 
@@ -191,7 +191,7 @@ iframe {
 }
 
 .container2 .box .four .ad-res {
-    font-size: 1.2vw;
+    font-size: 1vw;
     font-family: var(--poppins-Text);
 }
 
@@ -204,110 +204,113 @@ iframe {
 
 /*-------------------contact Us________________-*/
 
-
-
-.sectionfor_contact {
-    background: none;
+.contactus {
+    padding: 50px 8vw;
 }
 
-.section6 .container6 .slicecake {
+.contactus .container {
+
+    display: flex;
+    gap: 20px;
+}
+
+.contactus .container .boxes {
+
     display: flex;
     flex-direction: column;
-
-    background-color: white;
-    /* border: black solid; */
-    width: 30%;
-    /* height: 70vh; */
-
 }
 
-.section6 .container6 .slicecake .box1 {
+.contactus .container .b1 {
     display: flex;
+    flex: 0 0 30%;
+    flex-direction: column;
+    gap: 30px;
     align-items: flex-start;
-    flex-direction: column;
-    gap: 20px;
 }
 
-.section6 .container6 .slicecake .box2 {
-    /* border: red solid; */
-    width: 100%;
-    height: 50vh;
-}
-
-.section6 .container6 .slicecake img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-
-.contactus .pic .box1 {
+.contactus .container .b1 .timing {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 15px;
+    align-items: flex-start;
 }
 
-.contactus .pic .box1 h6 {
-    font-size: 1vw;
-    font-family: var(--poppins-Text);
+.contactus .container .boxes h2 {
+    color: black;
+    font-size: 2rem;
 }
 
-.contactus .pic .box2 {
-    height: 40vh;
-    width: 100%;
-    animation: cakec ease-out;
-    transform: translateX(0%);
-    animation-timeline: view();
-    animation-range: entry 0% 50vh;
+.contactus .container .boxes .timing h4 {
+    color: black;
 }
 
-@keyframes cakec {
-    from {
-        transform: translateX(-150%);
-    }
+.contactus .container .b1 .img {
+    width: 90px;
+    width: 90px;
 }
 
-.contactus .pic .box2 img {
+.contactus .container .b1 .img img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
 
-.sectionfor_contact .container6 .pic {
-    padding: 20px;
-    /* border: red solid; */
-    box-shadow: 0px 0px 10px 1px black;
-    width: 30%;
-    transform: translateX(0%);
-    animation: picc ease;
-    animation-timeline: view();
-    animation-range: entry 0% 50vh;
-    border-radius: 30px 0 0 30px;
+.contactus .container .b2 {
+    padding: 0 20px;
+    display: flex;
+    flex: 0 0 70%;
+    flex-direction: column;
+    gap: 30px;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
-@keyframes picc {
-    from {
-        transform: translateX(100%);
-    }
+.contactus .container .b2 .inputs1 {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+
+}
+
+.contactus .container .b2 .inputs {
+    width: 100%;
+}
+
+.contactus .container .b2 .inputs1 input {
+    flex: 0 0 48%;
+    height: 6vh;
+    padding: 0 20px;
+    background-color: rgb(230, 230, 230);
+    border: 1px solid gray;
+}
+
+.contactus .container .b2 .inputs1 input:focus {
+    outline: none;
+}
+
+.contactus .container .b2 .inputs .message {
+    display: flex;
+    padding: 0 20px;
+    width: 100%;
+    height: 25vh;
+    background-color: rgb(230, 230, 230);
+    border: 1px solid gray;
+}
+
+.contactus .container .b2 .inputs .message:focus {
+    outline: none;
+}
+
+.contactus .container .b2 .inputs button {
+    width: 20%;
+    height: 6vh;
+    color: white;
+    background-color: var(--button-color);
+    font-size: 1rem;
 }
 
 
-
-.sectionfor_contact .container6 .contact {
-    width: 70%;
-    transform: scale(1);
-    transform: translateX(0%);
-    border-radius: 0px 20px 20px 0;
-    animation: extract ease;
-    animation-timeline: view();
-    animation-range: entry 0% 50vh;
-}
-
-@keyframes extract {
-    from {
-        transform: translateX(-60%);
-    }
-}
 
 
 
@@ -448,7 +451,7 @@ iframe {
     }
 
 
-       .container2 .box .four .ad-res {
+    .container2 .box .four .ad-res {
         font-size: 4vw;
         display: flex;
         align-items: center;
@@ -462,65 +465,48 @@ iframe {
 
 
 
-    /*----------------next--------------------*/
+    /*----------------contactus--------------------*/
 
-    .sectionfor_contact .container6 .pic {
-        padding: 20px;
-        /* border: red solid; */
-        box-shadow: 0px 0px 10px 1px black;
-        width: 100%;
-        transform: translateX(0%);
-        animation: picc ease;
-        animation-timeline: view();
-        animation-range: entry 10% 10vh;
-        border-radius: 30px 30px 0 0;
-    }
+   .contactus .container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
 
-    @keyframes picc {
-        from {
-            transform: translateX(-100%);
-        }
-    }
+.contactus .container .b2 {
+    width: 100%;
+    padding: 0;
+    display: flex;
+    /* flex: 0 0 63%; */
+    flex-direction: column;
+    gap: 30px;
+    align-items: flex-start;
+    justify-content: space-between;
+}
 
+.contactus .container .b2 .inputs1 {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    /* justify-content: space-between; */
+    width: 100%;
+}
 
-    .contactus .pic .box1 h6 {
-        font-size: 4.2vw;
-        text-align: center;
-    }
+.contactus .container .b2 .inputs1 input {
+    flex: none;
+    height: 8vh;
+    padding: 0 20px;
+    background-color: rgb(230, 230, 230);
+    border: 1px solid gray;
+}
 
-
-    .welcome {
-        text-align: center;
-    }
-
-
-    .sectionfor_contact .container6 .contact {
-        width: 100%;
-        transform: scale(1);
-        transform: translateX(0%);
-        border-radius: 0 0 20px 20px;
-        animation: extract ease;
-        animation-timeline: view();
-        animation-range: entry 0% 50vh;
-    }
-
-    .footer .three .ser input {
-        padding: 0px 10% 0px 5%;
-        width: 100%;
-        height: 5vh;
-        border: none;
-        background-color: rgb(4, 4, 4);
-        color: rgb(255, 255, 255);
-        animation: three linear;
-        animation-timeline: view();
-        animation-range: entry 40% cover 10vh;
-    }
-
-    @keyframes extract {
-        from {
-            transform: translateX(-60%);
-        }
-    }
+.contactus .container .b2 .inputs button {
+    width: 44%;
+    height: 6vh;
+    color: white;
+    background-color: var(--button-color);
+    font-size: 1rem;
+}
 
 
 }
