--- a/style/style.css
+++ b/style/style.css
@@ -75,7 +75,7 @@ section {
 
 .section1 {
 
-    background: url(../images/landing-page/pastries.jpg) no-repeat;
+    background: url(../images/landing-page/close-up-chocolate-dessert-with-sugar-powder.jpg) no-repeat;
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -139,7 +139,7 @@ section {
 }
 
 .header3 a {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 
 
@@ -402,14 +402,11 @@ nav ul li a:hover {
     position: absolute;
     top: -15%;
     right: -27%;
-    background-color: rgba(0, 0, 0, 0.448);
+    background-color: rgb(255 255 255 / 14%);
     backdrop-filter: blur(3px);
     height: 1000px;
     width: 65%;
-    /* height: 800px;
-    width: 800px; */
     /* border: red solid; */
-
 }
 
 .circle {
@@ -599,137 +596,7 @@ nav ul li a:hover {
 
 
 
-/* @keyframes cake1 {
-    0% {
-        top: 5%;
-        left: 25%;
-    }
 
-    25% {
-        left: 0%;
-        top: 35%;
-        transform: scale(1.3);
-    }
-
-    50% {
-        top: 95%;
-        left: 35%;
-        transform: scale(.3);
-    }
-
-    75% {
-        left: 65%;
-        top: 25%;
-    }
-
-    100% {
-        top: 5%;
-        left: 25%;
-    }
-} */
-
-/* @keyframes cake2 {
-    0% {
-        left: 0%;
-        top: 35%;
-        transform: scale(1.3);
-    }
-
-    25% {
-        top: 95%;
-        left: 25%;
-        transform: scale(.3);
-    }
-
-    50% {
-        left: 65%;
-        top: 35%;
-        transform: scale(.3);
-    }
-
-    75% {
-        top: 5%;
-        left: 25%;
-        transform: scale(.3);
-    }
-
-    100% {
-        left: 0%;
-        top: 35%;
-        transform: scale(1.3);
-    }
-} */
-
-/* @keyframes cake3 {
-    0% {
-        top: 95%;
-        left: 25%;
-        transform: scale(.3);
-    }
-
-    25% {
-        left: 65%;
-        top: 35%;
-        transform: scale(.3);
-    }
-
-    50% {
-        top: 5%;
-        left: 25%;
-        transform: scale(.3);
-    }
-
-    75% {
-        left: 0%;
-        top: 35%;
-        transform: scale(1.3);
-    }
-
-    100% {
-        top: 95%;
-        left: 25%;
-        transform: scale(.3);
-    }
-
-} */
-
-/* @keyframes cake4 {
-    0% {
-        left: 65%;
-        top: 35%;
-        transform: scale(.3);
-    }
-
-    25% {
-        top: 5%;
-        left: 25%;
-        transform: scale(.3);
-    }
-
-    50% {
-        left: 0%;
-        top: 35%;
-        transform: scale(1.3);
-    }
-
-    75% {
-        top: 95%;
-        left: 25%;
-        transform: scale(.3);
-    }
-
-    100% {
-        left: 65%;
-        top: 35%;
-        transform: scale(.3);
-    }
-
-
-} */
-
-
-
-/*  */
 
 
 
@@ -757,9 +624,9 @@ nav ul li a:hover {
     height: 100%;
     width: 100%;
     border-radius: 20px;
-   
     border: none;
-
+    background-color: #ffffff1f;
+    color: white;
 }
 
 .container1 .box1 .cakesearch input:focus {
@@ -767,9 +634,9 @@ nav ul li a:hover {
 }
 
 .container1 .box1 .cakesearch .fa-magnifying-glass {
-
     left: 10px;
     font-size: 20px;
+    color: white;
     position: absolute;
 }
 
@@ -778,14 +645,12 @@ nav ul li a:hover {
     height: 80%;
     width: 30%;
     right: 10px;
-    background-color: #6f0b0b;
+    background-color: #4e4b4b;
     border-radius: 20px;
     position: absolute;
     color: white;
     font-weight: 600;
     border: none;
-
-
 }
 
 
@@ -796,13 +661,14 @@ nav ul li a:hover {
 
 .container1 .box1 .explore button {
     height: 7vh;
-    background-color: rgb(15, 12, 13);
+    background-color: rgb(255 255 255);
     width: 60%;
     border-radius: 10px;
-    color: white;
-    font-size: 18px;
+    color: #000000;
+    font-size: 19px;
     border: none;
-
+    font-family: "Montserrat", sans-serif;
+    cursor: pointer;
 }
 
 .container1 .box1 h3 {
@@ -815,12 +681,15 @@ nav ul li a:hover {
 
 .container1 .box1 .s {
     font-size: 40px;
-    color: rgb(2 53 7);
+    color: rgb(255, 183, 1);
     text-transform: var(--capitalize-case);
     font-family: "Fugaz One", sans-serif;
 }
 
-.container1 .box1 p {}
+.container1 .box1 p {
+    color: rgba(255, 255, 255, 0.623);
+    font-family: "Poppins", sans-serif;
+}
 
 
 
@@ -833,18 +702,20 @@ nav ul li a:hover {
 .container1 .box1 .h1 {
     overflow: hidden;
     /* border-right: white solid; */
-    color: rgb(101, 0, 0);
+    color: rgb(255 255 255);
     /* font-family: "Kavoon", serif; */
     font-family: "Poppins", sans-serif;
     font-size: 5vw;
     font-weight: 900;
     text-transform: var(--upper-case);
-    animation: text 1s;
+    animation: text 3s steps(20) infinite alternate;
+    border-right: rgb(255, 255, 255) solid;
+    width: 470px;
 }
 
 @keyframes text {
     from {
-        transform: translateX(-600px);
+        width: 0px;
     }
 }
 
@@ -854,73 +725,7 @@ nav ul li a:hover {
 
 
 
-/*---------------section2--------------------*/
 
-
-
-
-
-/*-----------------heading-------------*/
-
-/* .heading {
-    border: black solid;
-    height: 20vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    gap: 10px;
-    border: black solid;
-    width: 100%;
-}
-
-.heading h4 {
-    font-size: 2vw;
-    font-family: "Pacifico", cursive;
-    font-weight: 300;
-    color: black;
-}
-
-.heading h1 {
-    font-family: "Pacifico", cursive;
-    font-weight: 500;
-    color: black;
-    font-size: 3vw;
-}
-
-.heading .line {
-    position: relative;
-    background-color: brown;
-    height: 2px;
-    width: 200px;
-}
-
-.line::before {
-    content: "";
-    position: absolute;
-    height: 10px;
-    width: 40%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: brown;
-} */
-
-
-
-/*--------------heading end----------------*/
-
-
-
-/* .container8 {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    font-family: Arial, sans-serif;
-} */
 
 .category {
     position: relative;
@@ -1042,7 +847,7 @@ nav ul li a:hover {
         font-size: 28px;
     }
 
-   
+
 
     /* hide arrows on small screens if desired */
 }
@@ -1078,6 +883,7 @@ nav ul li a:hover {
 
 .container2 .aboutus .range {
     gap: 40px;
+    
 }
 
 .container2 .aboutus .a h3 {
@@ -1088,7 +894,7 @@ nav ul li a:hover {
 
 .container2 .aboutus .range h3 {
     font-size: 1rem;
-   
+
     color: #444444;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -1111,6 +917,7 @@ nav ul li a:hover {
     display: flex;
     flex-direction: column;
     gap: 10px;
+  
 
 }
 
@@ -1120,17 +927,34 @@ nav ul li a:hover {
 }
 
 .container2 .range .three .lv {
-
+   
     background-color: rgb(211, 211, 211);
     height: 1.2vh;
     width: 100%;
+  
 }
 
 .container2 .range .three .lv .level {
     background-color: black;
     width: 95%;
     height: 100%;
+  
+    animation: range linear;
+    animation-timeline: view();
+    animation-range: entry 20% cover 40vh;
 }
+
+@keyframes range {
+    
+    from{
+        width: 0%;
+    }
+    to{
+        width: 100%;
+    }
+}
+
+
 
 .container2 .range .three .lv .l1 {
 
@@ -1618,7 +1442,8 @@ nav ul li a:hover {
     padding: 0 20px;
     border: none;
 }
-.section6 .container6 .two input:focus{
+
+.section6 .container6 .two input:focus {
     outline: none;
 }
 
@@ -1687,8 +1512,17 @@ nav ul li a:hover {
     gap: 25px;
     animation: slide 20s linear infinite;
 
+}
 
+@keyframes slide {
 
+    from {
+        transform: translateX(0%);
+    }
+
+    to {
+        transform: translateX(-100%);
+    }
 }
 
 .container7 .scroll .review {
@@ -1709,7 +1543,7 @@ nav ul li a:hover {
     align-items: center;
 }
 
-.container7 .scroll .review .comment p{
+.container7 .scroll .review .comment p {
     color: #111111;
     font-style: italic;
     font-size: 16px;
@@ -1730,7 +1564,7 @@ nav ul li a:hover {
 }
 
 .container7 .scroll .review .prof .picture .name h4 {
-   
+
     color: #444444;
     font-size: 14px;
 }
@@ -1752,7 +1586,7 @@ nav ul li a:hover {
 }
 
 .container7 .scroll .review .prof .ratings i {
-      color: rgb(255 209 0);
+    color: rgb(255 209 0);
 }
 
 .container7 .group {
@@ -1767,16 +1601,7 @@ nav ul li a:hover {
     display: none;
 }
 
-@keyframes slide {
 
-    from {
-        transform: translateX(0%);
-    }
-
-    to {
-        transform: translateX(-100%);
-    }
-}
 
 
 
@@ -2451,6 +2276,22 @@ footer .end .r .b3 {
         text-align: center;
         width: 100%;
     }
+    .container1 .box1 .h1 {
+    overflow: hidden;
+    /* border-right: white solid; */
+    color: rgb(255 255 255);
+    /* font-family: "Kavoon", serif; */
+    font-family: "Poppins", sans-serif;
+    font-size: 5vw;
+    font-weight: 900;
+    text-transform: var(--upper-case);
+    animation: none;
+    border: none;
+    width: fit-content;
+  
+}
+
+
 
     p {
         font-family: "Nunito Sans", sans-serif;
@@ -2525,6 +2366,16 @@ footer .end .r .b3 {
         box-shadow: -5px 0px 10px 1px black;
         width: 100%;
         height: 45vh;
+    }
+
+
+
+    /*------------section7 ----------------*/
+    .container7 .scroll .review .prof {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
     }
 
 
@@ -2890,21 +2741,47 @@ footer .end .r .b3 {
 
     .container1 .box1 .s {
         font-size: 25px;
-        color: rgb(0 108 10);
+
         text-transform: var(--capitalize-case);
     }
 
 
 
     .container1 .box1 .h1 {
-        overflow: hidden;
-        /* border-right: white solid; */
-        color: rgb(101, 0, 0);
-        /* font-family: "Bungee Outline", sans-serif; */
-        font-size: 3rem;
-        font-weight: 900;
-        text-transform: var(--upper-case);
-        animation: text 1s;
+    overflow: hidden;
+    /* border-right: white solid; */
+    color: rgb(255 255 255);
+    /* font-family: "Kavoon", serif; */
+    font-family: "Poppins", sans-serif;
+    font-size: 14vw;
+    font-weight: 900;
+    text-transform: var(--upper-case);
+    animation:none;
+    border: none;
+    width: 100%;
+}
+
+
+
+    .container1 .box1 .cakesearch {
+        position: relative;
+        /* border: red solid; */
+        height: 6vh;
+        display: flex;
+        align-items: center;
+    }
+
+        .container1 .box1 .explore button {
+        height: 7vh;
+        background-color: rgb(255 255 255);
+        width: 63%;
+        padding: 10px;
+        border-radius: 10px;
+        color: #000000;
+        font-size: 19px;
+        border: none;
+        font-family: "Montserrat", sans-serif;
+        cursor: pointer;
     }
 
 
@@ -2917,8 +2794,8 @@ footer .end .r .b3 {
         position: relative;
         border-radius: 50%;
         position: absolute;
-        top: 72%;
-        background-color: rgba(0, 0, 0, 0.34);
+        top: 69%;
+      
         backdrop-filter: blur(3px);
         height: 568px;
         width: 160%;
@@ -3141,7 +3018,7 @@ footer .end .r .b3 {
         display: flex;
         flex-direction: column;
         overflow: hidden;
-        height: 47vh;
+        height: 36vh;
         min-width: 198px;
         box-shadow: 0px 0px 5px 1px black;
         border-radius: 0px 0px 30px 30px;
@@ -3317,16 +3194,15 @@ footer .end .r .b3 {
     }
 
     .container2 .category {
-    padding: 50px 20px;
-}
+        padding: 50px 20px;
+    }
 
 
     /*--------------section 3-----------------*/
 
-    .section3 {
-        padding: 50px 2vw 7vh 2vw;
+   .section3 {
+        padding: 50px 5vw 7vh 5vw;
     }
-
     .container3 .second .types .name h2 {
         text-align: center;
         font-size: 4.2vw;
@@ -3548,14 +3424,12 @@ footer .end .r .b3 {
 
     /*----------section 7-------------------------*/
 
-    .container7 .scroll .review {
-        flex: 0 0 21%;
-        background-color: white;
+    .container7 .scroll .review .prof {
         display: flex;
         flex-direction: column;
-        gap: 0px;
-        height: 100%;
-        padding: 30px;
+        justify-content: space-between;
+        align-items: center;
+        gap: 20px;
     }
 
 
