--- a/style/cart.css
+++ b/style/cart.css
@@ -42,11 +42,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 30px 0;
 
 }
 
 .cartp .hed h1 {
-    font-size: 3vw;
+    font-size: 2.5vw;
+      font-family: "Poppins", sans-serif;
 }
 
 .cartp .hed .hs {
@@ -61,13 +63,14 @@
 .hs1 {
     padding: 0 7px;
     border-right: 1px solid;
-    font-size: 20px;
+    font-size: 1rem;
+    font-family: "Poppins", sans-serif;
 }
 
 .hs2 {
-
+  font-family: "Poppins", sans-serif;
     padding: 0 7px;
-    font-size: 20px;
+    font-size: 1rem;
 }
 
 .body {
@@ -185,6 +188,7 @@ table td {
 .body .b_bill .dcode {
     font-size: 1.3vw;
     color: white;
+      font-family: "Poppins", sans-serif;
 }
 
 
@@ -214,6 +218,7 @@ table td {
     position: absolute;
     top: 0;
     right: 0;
+      font-family: "Poppins", sans-serif;
 }
 
 .carttotal {
@@ -292,11 +297,9 @@ table td {
     }
 
 
-    .hs1,
-    .hs2 {
+        .hs1, .hs2 {
         padding: 0 7px;
-      
-        font-size: 18px;
+        font-size: .8rem;
     }
 
 
