--- a/style/contact.css
+++ b/style/contact.css
@@ -373,6 +373,24 @@ iframe {
         animation-range: entry 0% 50vh;
     }
 
+    .address .container2 {
+    border-bottom: 1.5px rgb(0, 0, 0) solid;
+    padding: 50px 0;
+    display: flex;
+    /* flex-direction: column; */
+    /* align-items: center; */
+    /* flex-direction: row; */
+    gap: 13px;
+    justify-content: space-between;
+}
+
+.contactus .container {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    gap: 20px;
+}
+
 
 
 }
