--- a/style/contact.css
+++ b/style/contact.css
@@ -123,6 +123,17 @@ h4 {
 
 }
 
+.location .container1 .scroll .expand{
+    position: absolute;
+      bottom: 0;
+}
+
+.location .container1 .scroll .expand i{
+    color: white;
+    font-size: 1.6rem;
+  
+}
+
 
 
 
@@ -147,6 +158,10 @@ h4 {
 }
 
 .location .container1 .scroll:hover .scroller h2 {
+    display: none;
+}
+
+.location .container1 .scroll:hover .expand{
     display: none;
 }
 
